--- a/index.html
+++ b/index.html
@@ -21,12 +21,7 @@
 
     <!-- Navbar -->
 
-    <nav class="navbar navbar-expand-lg bg-body-tertiary bg-dark border-bottom border-body">
-
-        <!-- <nav class="navbar" style="background-color: #e3f2fd;"> -->
-        <!-- <nav class="navbar " data-bs-theme="dark"> -->
-
-
+    <nav class="navbar navbar-expand-lg bg-body-tertiary border-bottom border-body">
 
         <div class="container-fluid">
             <a class="navbar-brand" href="#">Code Gallery</a>
