--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
                             <li><a class="dropdown-item" href="#">HTML</a></li>
                             <li><a class="dropdown-item" href="#">CSS</a></li>
                             <li><a class="dropdown-item" href="#">React Js</a></li>
-
+                            <li><a class="dropdown-item" href="#">C++</a></li>
+                            <li><a class="dropdown-item" href="#">Java</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
