--- a/index.html
+++ b/index.html
@@ -56,7 +56,12 @@
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
-                            <li><a class="dropdown-item" href="#"></a></li>
+                            <li><a class="dropdown-item" href="#">Backend Development</a></li>
+                            <li><a class="dropdown-item" href="#">Frontend Development</a></li>
+                            <li><a class="dropdown-item" href="#">Fullstack Development</a></li>
+                            <li><a class="dropdown-item" href="#">Data Scientist</a></li>
+
+
                         </ul>
                     </li>
 
